ch02/2.5.2/ingress-tls.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
    - ssl.shmtu.edu.cn
    secretName: shmtu-tls
  rules:
    - ssl.shmtu.edu.cn
